name: ParaTwirst
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
description: .
             .
             .
data-dir: ""

executable ParaTwirst
    build-depends:  base -any,
                    cabal-version >= 1.2
    main-is: ParaTwist.hs
    buildable: True
    hs-source-dirs: src

