name: ParaTwist
version: 0.0.1
cabal-version: >= 1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description: .
             .
             .
data-dir: ""

Source-repository    head
  type:              git
  location:          git@github.com:adeven/paratwist.git

Executable paraTwist
    build-depends:  base -any,
                    compact-string-fix >= 0.3.2,
                    bytestring >= 0.9.1.10,
                    binary >= 0.5.0.2,
                    mtl >= 2.0.1.0,
                    enumerator >= 0.4.17,
                    utf8-string >= 0.3.7,
                    blaze-builder >= 0.3.0.2,
                    http-types >= 0.6.8,
                    wai >= 0.4.3,
                    warp >= 0.4.6.3,
                    mongoDB >= 1.1.1
    main-is: paraTwist.hs
    other-modules:  ParaTwist.Types,
                    ParaTwist.MongoDB,
                    ParaTwist.Warp
    buildable: True
    hs-source-dirs: src
    ghc-options: -Wall -threaded -rtsopts -prof
