name: ParaTwist
version: 0.0.1
cabal-version: >= 1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description: .
             .
             .
data-dir: ""

Source-repository    head
  type:              git
  location:          https://mugenken@github.com/adeven/ParaTwist.git

Executable paraTwist
    build-depends:  base -any,
                    compact-string-fix >= 0.3.2,
                    mtl >= 2.0.1.0,
                    enumerator >= 0.4.17,
                    utf8-string >= 0.3.7,
                    blaze-builder >= 0.3.0.2,
                    http-types >= 0.6.8,
                    wai >= 0.4.3,
                    warp >= 0.4.6.3,
                    bson >= 0.1.6,
                    mongoDB >= 1.1.1
    main-is: paraTwist.hs
    other-modules: ParaTwist.Types
    buildable: True
    hs-source-dirs: src
    ghc-options: -Wall -threaded -fllvm -rtsopts
